Fix alignment.

--- a/resources/scss/shared/custom-diff.scss
+++ b/resources/scss/shared/custom-diff.scss
@@ -323,6 +323,14 @@
 .add-inline-comment-wrapper {
   background-color: var(--background-color) !important;
 
+  td {
+    background-color: var(--background-color) !important;
+  }
+
+  td.empty-cell {
+    background-color: var(--background-color) !important;
+  }
+
   .inline-comment-form {
     padding: 1rem;
   }
